<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/joinGameView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.intro.views.JoinFragment">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:background="@null"
        android:contentDescription="@string/back_button"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_arrow_left_white_24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:paddingBottom="65dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/inputWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fillFormText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/text_enter_name_id"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/scanQRCodeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/text_name_qrcode"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/joinForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/background_white_rounded"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/userNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/text_enter_name"
                    android:inputType="textCapWords"
                    android:padding="16dp"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp" />

                <View
                    android:id="@+id/formDivider"
                    android:layout_width="match_parent"
                    android:layout_height=".5dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:background="@color/trolley_grey" />

                <EditText
                    android:id="@+id/gameIdEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/text_game_id"
                    android:inputType="number"
                    android:maxLength="7"
                    android:padding="16dp"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp" />

            </LinearLayout>

            <SurfaceView
                android:id="@+id/cameraView"
                android:layout_width="256dp"
                android:layout_height="256dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/orDividerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/text_or_divider"
                android:layout_margin="8dp"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/barcodeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/text_scan_qrcode"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/gameIdText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/text_enter_gameid"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/checkMark"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check_white_24dp"
                android:contentDescription="@string/qr_code_success_check_mark"
                android:visibility="gone" />

            <TextView
                android:id="@+id/qrCodeSuccessText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/text_qrcode_success"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="gone" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:color="@color/white"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/joinButton"
            style="@style/BottomBarButton"
            android:enabled="true"
            android:text="@string/text_join_game" />
    </LinearLayout>

</RelativeLayout>
