<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.intro.views.IntroFragment">

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/margin_medium"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_settings_white_24dp"
        android:contentDescription="@string/settings"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/ic_raise_logo"
        android:layout_above="@id/anchor"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name" />

    <View
        android:id="@+id/anchor"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_centerInParent="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/colorAccent"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/createButton"
            style="@style/BottomBarButton"
            android:text="@string/text_create_game"/>

        <Button
            android:id="@+id/joinButton"
            style="@style/BottomBarButton"
            android:text="@string/text_join_game" />
    </LinearLayout>

</RelativeLayout>
