<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_blue">

    <TextView
        android:id="@+id/selectDeckText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/select_poker_deck_type"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/deckTypeRadioGroup"
        app:layout_constraintVertical_chainStyle="packed" />

    <RadioGroup
        android:id="@+id/deckTypeRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectDeckText"
        app:layout_constraintBottom_toBottomOf="parent">

        <RadioButton
            android:id="@+id/fibonacciRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:text="@string/text_fibonacci"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_medium" />

        <RadioButton
            android:id="@+id/tshirtRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:text="@string/text_tshirt_sizes"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_medium" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/createButtonWrapper"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/createButton"
            style="@style/BottomBarButton"
            android:enabled="false"
            android:text="@string/text_start" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:color="@color/white"
        android:visibility="gone" />

    <android.support.constraint.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="selectDeckText,deckTypeRadioGroup,joinForm" />

</android.support.constraint.ConstraintLayout>