<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.pending.views.PokerInfoFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/text_game_details"
            android:textSize="@dimen/textsize_large" />

        <TextView
            android:id="@+id/gameIdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin_small"
            android:textSize="@dimen/textsize_normal" />

        <TextView
            android:id="@+id/passcodeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin_small"
            android:textSize="@dimen/textsize_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin_medium"
            android:text="@string/text_or_divider"
            android:textSize="@dimen/textsize_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin_small"
            android:gravity="center_horizontal"
            android:text="@string/text_qrcode_instructions"
            android:textSize="@dimen/textsize_normal" />

        <ImageView
            android:id="@+id/qrCodeImage"
            android:layout_width="192dp"
            android:layout_height="192dp"
            android:layout_margin="@dimen/margin_small"
            android:contentDescription="@string/text_qr_code" />

    </LinearLayout>

</ScrollView>
