<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/passcodeView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/pure_orange"
    tools:context=".ui.intro.views.PasscodeFragment">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/margin_small"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:contentDescription="@string/back_button"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_arrow_left_white_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passcodeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_enter_passcode"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_normal"
        app:layout_constraintBottom_toTopOf="@+id/passcodeEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />


    <EditText
        android:id="@+id/passcodeEditText"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:background="@drawable/background_white_rounded"
        android:textSize="@dimen/textsize_normal"
        android:padding="16dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/text_passcode"
        android:inputType="textCapCharacters"
        app:layout_constraintBottom_toTopOf="@id/barcodeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passcodeText">
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/barcodeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/passcodeEditText"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_normal"
        android:text="@string/text_scan_qrcode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passcodeEditText"/>

    <Button
        android:id="@+id/submitButton"
        style="@style/BottomBarButton"
        android:text="@string/text_join_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
